[package]
name = "news-aggregator"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_runtime = "0.13.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
ureq = { version = "2.6", features = ["json"] }
serde_json = "1.0"
openai_api_rust = "0.1.9"
